Added files for review and product directives, updated frontend browser files - about, navbar.js, navbar.html, home.html, product.html, seed file, index.html

--- a/browser/js/products/product.html
+++ b/browser/js/products/product.html
@@ -5,6 +5,7 @@
     <img ng-src="{{ product.photoUrl }}">
     <p>Inventory: {{ product.inventory }}</p>
     <p>Price: {{ product.currentPrice }} USD</p>
+    <p>Check out reviews for {{ product.name }}</p>
   </p>
     <!-- DIRECTIVE: -->
   <category-list categories="product.categories"></category-list>
