--- a/browser/js/products/product.html
+++ b/browser/js/products/product.html
@@ -2,10 +2,10 @@
   <p>
     <h3>{{ product.name }}</h3>
     <p>{{ product.description }}</p>
-    <img ng-src="{{ product.photoUrl }}">
+    <img height="400px" ng-src="{{ product.photoUrl }}">
     <p>Inventory: {{ product.inventory }}</p>
     <p>Price: {{ product.currentPrice }} USD</p>
-    <p>Check out reviews for {{ product.name }}</p>
+    <a ui-sref="reviews">Check out reviews for {{ product.name }}</a>
   </p>
     <!-- DIRECTIVE: -->
   <category-list categories="product.categories"></category-list>
