--- a/browser/js/products/product.html
+++ b/browser/js/products/product.html
@@ -7,8 +7,7 @@
     <p>Price: {{ product.currentPrice }} USD</p>
     <p ui-sref-active="active"><a ui-sref="reviews({productId: product.id})">Check out reviews for {{ product.name }}</a>
     <p>Categories: {{  }}</p>
+    <button ng-click="addItem()">Add Item To Cart</button>
   </p>
-    <!-- DIRECTIVE: -->
-
 
 </div>
