--- a/browser/js/products/products.html
+++ b/browser/js/products/products.html
@@ -1,5 +1,9 @@
 <section class="products">
-
+    <p>
+        <label>Choose a category
+            <select name="category" ng-options="category.name for category in categories" ng-change="selectedCategory" required></select>
+        </label>
+    </p>
     <div ng-repeat="product in products">
       <a ui-sref="product({productId: product.id})">{{ product.name }}</a>
     </div>
