--- a/browser/js/products/product.html
+++ b/browser/js/products/product.html
@@ -6,7 +6,7 @@
     <p>Inventory: {{ product.inventory }}</p>
     <p>Price: {{ product.currentPrice }} USD</p>
     <p ui-sref-active="active"><a ui-sref="reviews({productId: product.id})">Check out reviews for {{ product.name }}</a>
-    <p>Categories: {{  }}</p>
+    <p ui-sref-active="active">Categories: <a ng-repeat="category in categories" ui-sref="productsByCategory({categoryId: category.id})">{{ category.name + ' ' }}</a></p>
     <button ng-click="addItem()">Add Item To Cart</button>
   </p>
 
