--- a/browser/js/reviews/reviews.html
+++ b/browser/js/reviews/reviews.html
@@ -5,7 +5,7 @@
 
         <div>
           <h5>
-            <span>{{ review.stars }}</span>
+            <span>Rating: {{ review.stars }}</span>
           </h5>
           <p>{{ review.content }}</p>
         </div>
