--- a/browser/js/order-confirmation/order-confirmation.html
+++ b/browser/js/order-confirmation/order-confirmation.html
@@ -1,1 +1,3 @@
-<p>You ordered some shit!</p>
+
+	<h1>Your order has been submitted.</h1>
+	<p>Congratulations - we're one step closer to toppling the patriarchy.</p>
