Add reviews now works

--- a/browser/js/common/directives/add-review/add-review.html
+++ b/browser/js/common/directives/add-review/add-review.html
@@ -17,7 +17,7 @@
           ng-required="true">
             ...
           </textarea>
-            <button style="width:100%" ng-disabled="reviewForm.$invalid" ng-submit="addReview(selectedStars, review)"
+            <button style="width:100%" ng-disabled="reviewForm.$invalid" ng-click="addReview(selectedStars, review)"
             class="btn btn-default btn-warning">
             <span class="glyphicon glyphicon-star"></span>  Add Review  <span class="glyphicon glyphicon-star"></span>
           </button>
