--- a/browser/js/common/directives/cart/cart.html
+++ b/browser/js/common/directives/cart/cart.html
@@ -6,16 +6,16 @@
 		<h2>
 		<button class='btn btn-default btn-sm' ng-click="toggleExpand()" style="float:right">
 			<span class="glyphicon " ng-class="{'glyphicon-menu-up': expandCart,'glyphicon-menu-down': !expandCart}"}></span>
-		</button>	
-			<span class="glyphicon glyphicon-shopping-cart"></span> 
+		</button>
+			<span class="glyphicon glyphicon-shopping-cart"></span>
 			My Cart
-		
+
 		</h2>
 	</legend>
 	<div ng-show="expandCart">
 		<div>
 			<h4 ng-hide='cartIsEmpty()'>Items: {{number}}</h4>
-				<div class='well' ng-repeat='item in items'>
+				<div class='well' ng-repeat='item in cart.items'>
 					<h4>
 						{{item.name}}
 					<button ng-click="removeFromCart(item,'all')" class='btn btn-default btn-xs' style="float:right"><span class='glyphicon glyphicon-remove'></span></button>
@@ -24,13 +24,13 @@
 					<p><b>Quantity: </b><button class='btn btn-default btn-xs' ng-click="removeFromCart(item,'one')">-</button> {{item.quantity}} <button class='btn btn-default btn-xs' ng-click="addToCart(item)">+</button><br>
 					<b>Subtotal: </b>${{item.currentPrice*item.quantity}}<br></p>
 				</div>
-			<h4 ng-hide='cartIsEmpty()'>Total: ${{items.total}}</h4>
+			<h4 ng-hide='cartIsEmpty()'>Total: ${{cart.total}}</h4>
 			<button ng-hide="cartIsEmpty()" class="btn btn-success" ng-click='toggleCheckout()'>Proceed to Checkout</button>
 			<div ng-show="cartIsEmpty()"><h5>Your cart is empty!</h5><p><i>{{scoldingMessage}}</i></p><h5>Get <a ui-sref='products'>shopping</a>!</h5></div>
 		</div>
 	</div>
 </div>
 
-<!-- ui-sref="checkout({ordered:items})" 
+<!-- ui-sref="checkout({ordered:items})"
  -->
 
