updated routes, order history complete

--- a/browser/js/order-confirmation/order-confirmation.html
+++ b/browser/js/order-confirmation/order-confirmation.html
@@ -1,4 +1,4 @@
 
 	<h1>Your order has been submitted.</h1>
 	<p>Congratulations - we're one step closer to toppling the patriarchy.</p>
-	<order-history></order-history>
+	<order-history></order-history> <!--DEMONSTRATION PURPOSES ONLY. PLEASE REMOVE-->
