added shipping address to order history

--- a/browser/js/common/directives/order-history/order-history.html
+++ b/browser/js/common/directives/order-history/order-history.html
@@ -12,6 +12,7 @@
 			</div>
 			<p><b>Total:</b> ${{order.total}}</p>
 			<p><b>Status:</b> {{order.status}}</p>
+			<p><b>Shipping Address:</b> {{order.shippingAddress}}</p>
 		</div>
 
 </div>
