cart functionality improved code organized

--- a/browser/js/common/directives/cart/cart.html
+++ b/browser/js/common/directives/cart/cart.html
@@ -1,5 +1,5 @@
 <div class='well' ng-show='checkingOut()'>
-          <button style="width:100%" ng-click='checkingOut=false' ui-sref="products" class="btn btn-default btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>  Return to Cart</button>
+          <button style="width:100%" ui-sref="products" class="btn btn-default btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>  Continue Browsing</button>
 </div>
 <div class='well' ng-hide='checkingOut()'>
 	<legend>
