Just playing around with search bar

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -6,7 +6,14 @@
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
+            <li class="search">Search products
+                <input type="text" ng-model="searchProduct">
+            </li>
         </ul>
+
+
+
+        <button ng-show="!user" ui-sref="signup" class="btn login-button">Register</button>
         <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
             <span>Welcome, {{ user.email }}!</span>
