--- a/browser/js/update-product/update-product.html
+++ b/browser/js/update-product/update-product.html
@@ -1,28 +1,28 @@
 <div class="well">
-  <form class="form-horizontal" name='updateForm' ng-submit='submitOrder()' >
+  <form class="form-horizontal" name='updateForm' ng-submit='submitUpdate()' >
     <fieldset>
       <legend><h2>Product Information</h2></legend>
       <div class='well'><center><img src="{{currPhotoUrl}}" style="max-height:300px"/></center></div>
       <div class="form-group">
-        <label class="col-xs-2 control-label">Name</label>
+        <label class="col-xs-2 control-label">Name*</label>
         <div class="col-xs-10">
           <input ng-value='product.name' name='productName' class="form-control" type="text" ng-model='product.name' required>
         </div>
-        <label class="col-xs-2 control-label">Description</label>
+        <label class="col-xs-2 control-label">Description*</label>
         <div class="col-xs-10">
           <textarea rows="3" ng-value="product.description" name='productDescription' class="form-control" ng-model='product.description' required></textarea>
         </div>
-        <label class="col-xs-2 control-label">Inventory</label>
+        <label class="col-xs-2 control-label">Inventory*</label>
         <div class="col-xs-10">
-          <input ng-value='product.inventory' name='productInventory' class="form-control" type="integer"  ng-model='product.inventory' required>
+          <input ng-value='product.inventory' name='productInventory' class="form-control" type="integer"  ng-model='product.inventory' ng-pattern='/^\d+$/' required>
         </div>
-        <label class="col-xs-2 control-label">Price</label>
+        <label class="col-xs-2 control-label">Price ($)*</label>
         <div class="col-xs-10">
-          <input name='productPrice' type="text" class="form-control" ng-model='product.currentPrice' ng-value='product.currentPrice' required>
+          <input name='productPrice' type="text" ng-pattern='/^\d+(\.\d{1,2})?$/' class="form-control" ng-model='product.currentPrice' ng-value='product.currentPrice' required>
         </div>
         <label class="col-xs-2 control-label">Photo URL</label>
         <div class="col-xs-6">
-          <input name='productUrl' type='url' ng-value='product.photoUrl' class="form-control" ng-model='product.photoUrl'>
+          <input name='productUrl' type="text" ng-value='product.photoUrl' class="form-control" ng-model='product.photoUrl'>
         </div>
         <div class="col-xs-4">
           <button class="btn btn-warning" ng-click="updateCurrPhoto(product.photoUrl)">Update Preview</button>
@@ -32,8 +32,8 @@
         <div class="col-xs-10 col-xs-offset-2">
           <div class="alert alert-warning" ng-show='updateForm.productName.$error.required&&updateForm.productName.$dirty'>Please enter a name.</div>
           <div class="alert alert-warning" ng-show='updateForm.productDescription.$error.required&&updateForm.productDescription.$dirty'>Please enter a description.</div>
-          <div class="alert alert-warning" ng-show='updateForm.productInventory.$error.required&&updateForm.productInventory.$dirty'>Inventory: Please enter an integer.</div>
-          <div class="alert alert-warning" ng-show='updateForm.productInventory.$error.required&&updateForm.productPrice.$dirty'>Price: Please enter a decimal</div> 
+          <div class="alert alert-warning" ng-show='(updateForm.productInventory.$error.required||updateForm.productInventory.$error.pattern)&&updateForm.productInventory.$dirty'>Inventory: Please enter an integer.</div>
+          <div class="alert alert-warning" ng-show='(updateForm.productPrice.$error.required||updateForm.productPrice.$error.pattern)&&updateForm.productPrice.$dirty'>Price: Please enter a valid price.</div> 
           <button type="submit" class="btn btn-success" ng-disabled='updateForm.$invalid'>Edit Product</button>
 
         </div>
