pretty much working

--- a/browser/js/update-product/update-product.html
+++ b/browser/js/update-product/update-product.html
@@ -40,5 +40,5 @@
       </div>
     </fieldset>
   </form>
-
+  <div class="alert alert-warning" ng-show='somethingWrong'>Oops! Something went wrong on our end. Please try again.</div> 
 </div>
