edit product functional

--- a/browser/js/products/product.html
+++ b/browser/js/products/product.html
@@ -11,7 +11,7 @@
         <center><p>
                     <i>{{ product.description }}</i><br> 
                     <b>{{ product.currentPrice }}</b> USD |
-                    <b>{{ product.inventory }}</b> left. </p>
+                    <b>{{ product.inventory }}</b> in stock. </p>
         </center>
 
         </div>
