plus cosmetic changes

--- a/browser/js/order-confirmation/order-confirmation.html
+++ b/browser/js/order-confirmation/order-confirmation.html
@@ -1,4 +1,4 @@
 
 	<h1>Your order has been submitted.</h1>
 	<p>Thanks to you, we're one purchase closer to toppling the patriarchy.</p>
-	<order-history></order-history> <!--DEMONSTRATION PURPOSES ONLY. PLEASE REMOVE-->
+	<p>Don't expect a confirmation email - this website is built on trust <span class='glyphicon glyphicon-heart'></span></p>
