done plus cosmetic changes

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,6 +1,6 @@
-<section id="home">
-    <h2>WELCOME TO FEMINIST TOOL KITS</h2>
-    <h3>Top sellers:</h3>
+<section id="home" class='well'>
+    <legend><h2>Welcome to Feminist Toolkits.</h2></legend>
+    <h4>Top sellers:</h4>
     <p></p>
     <div class="row">
       <div ng-repeat="product in topProducts | orderBy: 'name'" class="col-sm-4">
