--- a/browser/js/update-product/update-product.html
+++ b/browser/js/update-product/update-product.html
@@ -35,7 +35,7 @@
           <div class="alert alert-warning" ng-show='(updateForm.productInventory.$error.required||updateForm.productInventory.$error.pattern)&&updateForm.productInventory.$dirty'>Inventory: Please enter an integer.</div>
           <div class="alert alert-warning" ng-show='(updateForm.productPrice.$error.required||updateForm.productPrice.$error.pattern)&&updateForm.productPrice.$dirty'>Price: Please enter a valid price.</div> 
           <div class="alert alert-warning" ng-show='updateForm.productUrl.$error.required&&updateForm.productUrl.$dirty'>Please enter a photo url.</div>
-          <button type="submit" class="btn btn-success" ng-disabled='updateForm.$invalid'>Edit Product</button>
+          <button type="submit" class="btn btn-success" ng-disabled='updateForm.$invalid'>Place Product</button>
 
         </div>
       </div>
