Add category feature works

--- a/browser/js/admin-dashboard/admin-dashboard.html
+++ b/browser/js/admin-dashboard/admin-dashboard.html
@@ -61,9 +61,7 @@
       </tr>
     </table>
 
-
-    <!-- add category input -->
-    <form ng-submit="addCategory(newCat)" name="addCatForm">
+    <form ng-submit="addCat(newCat)" name="addCatForm">
       <input type="text" name="catName" ng-model="newCat">
       <button type="submit">Add</button>
     </form>
