--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,6 +1,6 @@
 <section id="about">
     <h3>
-        '“I hate to hear you talk about all women as if they were fine ladies instead of rational creatures. None of us want to be in calm waters all our lives.” ― Jane Austen, Persuasion'
+        “I hate to hear you talk about all women as if they were fine ladies instead of rational creatures. None of us want to be in calm waters all our lives.” ― Jane Austen, Persuasion
     </h3>
     <p><a href="https://github.com/EmilyClaire/Feminist-Toolkits">Check out our github repo!</a></p>
 
